fix gap in aside menu

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -89,7 +89,13 @@
 
   &__text__container {
     display: flex;
-    gap: 123px;
+    flex-direction: column;
+    gap: 30px;
+
+    @include onDesctop {
+      // display: flex;
+      gap: 123px;
+    }
   }
 
   &__text {
